# netbox-dns-validator

./: .gitignore  README.md  pyproject.toml
netbox_dns_validator/: __init__.py  choices.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_dns_validator/migrations/: 0001_initial.py  0002_whois_server_used.py  0003_tldwhoisconfig.py
netbox_dns_validator/templates/netbox_dns_validator/: validate_view.html  zone_validation_detail.html  zone_validation_list.html
netbox_dns_validator/validators/: ns_delegation.py  resolver_check.py  runner.py  whois_check.py
